<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <TextView android:text="@string/sendlist" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical" >
        <ListView
            android:id="@android:id/list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </ListView>
        <TextView
            android:id="@android:id/empty"
            android:layout_marginLeft="@dimen/space1"
            android:text="@string/no_name" />
    </LinearLayout>
    
    <View style="@style/Separator" />
    
    <Button
        android:id="@+id/send"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/space1"
        android:layout_marginRight="@dimen/space1"
        android:text="@string/send" />
</LinearLayout>
